fix(): menu spacing

--- a/src/components/page-docs/page-docs.css
+++ b/src/components/page-docs/page-docs.css
@@ -23,6 +23,10 @@
     transition: transform 200ms cubic-bezier(0.23, 1, 0.320, 1);
 }
 
+.docs nav {
+    margin-top: 1.83em;
+}
+
 .docs article {
     transition: transform 200ms cubic-bezier(0.23, 1, 0.320, 1);
 }
